kube-config/conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      name: conv-api
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 200m
          volumeMounts:
            - name: conv-api-data
              mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-data
          persistentVolumeClaim:
            claimName: conv-api-pvc
