kube-config/conv-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app
spec:
  replicas: 2
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      name: conv-app
      labels:
        components: frontend
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 100m
