kube-config/converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      name: converter
      labels:
        components: converter
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3080
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 100m
