kube-config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: conv.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: short-app-clusterip
                port:
                  number: 80
